--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -74,9 +74,9 @@
                 <div class="col-lg-12">
                     
                     <ul class="list-inline">
-                        <li><a href="#services">{% trans "General terms" %}</a></li>
+                        <li><a href="{% url 'terms_of_service' %}">{% trans 'Terms of service' %}</a></li>
                         <li class="footer-menu-divider">&sdot;</li>
-                        <li><a href="mailto:info@projekt-tomo.si">{% trans "Contact" %}</a></li>
+                        <li><a href="mailto:info@projekt-tomo.si">{% trans 'Contact' %}</a></li>
                     </ul>
                     
                     <p class="copyright text-muted small">{% trans "Copyright &copy; Faculty of Mathematics and Physics, University of Ljubljana, 2015. All Rights Reserved "%}</p>
