--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -25,7 +25,7 @@
         </p>
         <div class="form-group">
         <a class="btn btn-default" role="button" href="#">
-           {% trans 'ArnesAAI' %}
+           <i class="fa fa-university fa-lg"></i> {% trans 'ArnesAAI' %}
         </a>
         <a class="btn btn-default" role="button"
            href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">
