--- a/web/utils/static/css/tomo.css
+++ b/web/utils/static/css/tomo.css
@@ -20,6 +20,13 @@
 .tomo-thin { font-weight: 300; }
 .tomo-institution { color: #666; font-weight: 300; }
 .tomo-lecturer { font-style: italic; color: #A92D2D; }
+.tomo-lecturers { list-style-type: none; color: #A92D2D; font-weight: 500; padding: 0; margin: 10px 0; }
+.tomo-students { list-style-type: none; font-weight: 500; padding: 0; margin: 10px 0; }
+.tomo-students li { margin: 7px 0; }
+li .tomo-teacher-switch { display: none; }
+li:hover .tomo-teacher-switch, .tomo-students li:focus .tomo-teacher-switch { display: inline; }
+.tomo-teacher-switch .btn { margin: 0 0 0 10px; border: none; padding: 0; background: none; color: #000; }
+.tomo-teacher-switch .btn:hover { color: #D7A02C }
 
 .tomo-home { margin: 0 40px 0 0; padding: 0; }
 .tomo-home img { height: 100%; }
@@ -30,8 +37,8 @@
 .tomo-login-signin i { margin-right: 10px; }
 .tomo-login hr { border-color: #999; }
 .tomo-login form { margin: .5em 0; border-radius: 4px; padding: 1em; }
-.tomo-login button { margin: 0px 7px; background-color: rgba(135, 143, 40, .5) }
-.tomo-login button i { margin-right: 10px; }
+.tomo-login .btn { margin: 0px 7px; background-color: rgba(135, 143, 40, .5) }
+.tomo-login .btn i { margin-right: 10px; }
 .tomo-login .fa-google { vertical-align: -25% } /* vertical position fix */
 
 
@@ -64,6 +71,8 @@
 .tomo-courses .media-left { height: 50px; line-height: 38px; font-size: 30px; text-align: right; padding-left: 10px; }
 .tomo-courses .media-left p { display: block; width: 80px; }
 .tomo-courses .media-middle { padding-left: 20px; }
+.tomo-courses .media-right { float: right; margin-right: 20px; }
+.tomo-courses button { border: none; background-color: rgba(215, 160, 44, .2); color: #D7A02C; }
 
 .tomo-chapter-heading { margin-left: 20px; }
 .tomo-chapter-heading .pull-left { margin-top: 20px; }
@@ -71,8 +80,8 @@
 .tomo-chapter-heading h2 span { margin-top: -15px; display: block; }
 .tomo-chapter-heading .btn-default { padding-top: 10px; background-color: #878F28; color: #fff; }
 .tomo-task-heading .btn-default { width: 40px; color: #fff; }
-.tomo-task-heading .download-btn { background-color: #878F28; }
-.tomo-task-heading .solutions-btn { background-color: #D7A02C; }
+.tomo-task-heading [aria-label="Download"] .btn-default { background-color: #878F28; }
+.tomo-task-heading [aria-label="Solutions"] .btn-default { background-color: #D7A02C; }
 
 .tomo-other { margin: 0; padding: 0; }
 .tomo-other .col-md-4 { margin-right: 0px; height: 15em; padding: 2em 4em; }
@@ -84,11 +93,50 @@
 .tomo-other .tomo-enroll .fa-star, .tomo-enroll:hover .fa-star-o { display: none; }
 .tomo-other .tomo-enroll:hover .fa-star { display: inline; color: #D7A02C; }
 
+.tomo-task-solutions { margin-top: 2em; }
+.tomo-task { margin: 1em 0; }
+.tomo-solution-user {
+  margin: 0;
+  padding: 0;
+  -ms-transform: rotate(270deg) translateX(-220px); /* IE 9 */
+  -ms-transform-origin: left top 0;
+  -webkit-transform: rotate(270deg) translateX(-220px); /* Chrome, Safari, Opera */
+  -webkit-transform-origin: left top 0;
+  transform: rotate(270deg) translateX(-220px);
+  transform-origin: left top 0;
+  float: left;
+  width: 200px;
+  text-align: right;
+  color: #D7A02C;
+}
+.tomo-solution-official {
+ -ms-transform: rotate(90deg) translate(20px,-200px); /* IE 9 */
+ -ms-transform-origin: left top 0;
+ -webkit-transform: rotate(90deg) translate(20px,-200px); /* Chrome, Safari, Opera */
+ -webkit-transform-origin: left top 0;
+ transform: rotate(90deg) translate(20px,-200px);
+ transform-origin: left top 0;
+ float: right;
+ width: 200px;
+ color:#878F28;
+}
+.tomo-solution-code-user { margin-left: 30px; }
+.tomo-solution-code-official { margin-right: 30px; }
+.tomo-solution-code-user pre, .tomo-solution-code-official pre {
+  width: 100%; margin: 0; }
+
 footer img { max-width: 100%; max-height: 6em; margin-bottom: 20px; }
+
+.chart { width: 1.2em; height: 1.2em; display: block; float: left; margin: .1em 10px 0 0; }
+.chart path { cursor: pointer; }
 
 .affix-top, .affix { position: static; }
 @media (min-width: 979px) {
   #sidebar.affix-top { position: static; margin-top: 30px; width: 228px; }
   #sidebar.affix { position: fixed; top: 70px; width: 228px; }
 }
-#sidebar li.active { border: 0 #eee solid; border-right-width: 5px; }
+#sidebar a { font-size: 1.5em;  }
+#sidebar li.active { background-color: #fff; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }
+#sidebar .subtasks { overflow: auto; }
+#sidebar .subtasks a { font-size: 1em; display: block; width: 3em; text-align: right; margin: 5px; float: left; }
+#sidebar .subtasks .chart { float: right; margin: .05em 0 0 5px; }
