--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -1,102 +1,109 @@
 {% load i18n %}
 {% load staticfiles %}
-{% if problem_set.visible or show_teacher_forms%}
 <li class="list-group-item">
+  {% if show_teacher_forms %}
+  <hr class="indicator background{{problem_set.grade}}" width="{{ problem_set.percentage }}%">
+  {% else %}
+  <hr class="indicator background{{problem_set.grade}}" width="{{ problem_set.percentage }}%">
+  {% endif %}
+
   <div class="media">
-    <div class="media-left">
-      <div style='width: 80px; height: 60px; line-height: 60px; font-size: 20px;'>
-        {% with percentage=problem_set.percentage %}
-        {% if percentage == None %}
-        <p class="text-center percentage">/</p>
-        {% else %}
-        <p class="text-center percentage text-{% if percentage < 50 %}danger{% elif percentage < 90 %}warning{% else %}success{% endif %}">
-        	{{ percentage }}<small>%</small>
-        </p>
-        {% endif %}
-        {% endwith %}
-      </div>
-    </div>
- 	<div class="media-body media-middle">	
- 		<div class="row">
-		  <div class="col-md-6">
-		  	<h4 class="media-heading">
-			    <a style={% if problem_set.visible %}""{% else %}"color:#bbb"{% endif %}" 
-			         href="{% url 'problem_set_detail' problem_set.pk %}">
-			         {{ problem_set.title }}
-	         	</a>
-		    </h4>
-		  </div>
-		  {% if course.show_teacher_forms or show_teacher_forms %}
-		  <div class="col-md-6">
-		  	 <span class="pull-right">
-			  	 <div class="btn-group btn-group-sm" role="group" aria-label="Update">
-		  	 		<button class="btn btn-default btn-for-modal" data-url="{% url 'problem_set_update' problem_set.pk %}" aria-label="Update"
-		  	 			data-toggle="tooltip" title="{% trans 'Edit' %}" data-container:'body' data-viewport: '#viewport' id="viewport">
-			            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-			        </button>
-			     </div>
-			     <div class="btn-group btn-group-sm" role="group" aria-label="Delete">
-		  	 		<button class="btn btn-default btn-for-modal" data-url="{% url 'problem_set_delete' problem_set.pk %}" aria-label="Delete"
-		  	 			data-toggle="tooltip" title="{% trans 'Delete' %}" data-container:'body'>
-			            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-			        </button>
-			     </div>
-			  	 <div class="btn-group btn-group-sm" role="group" aria-label="Move">
-	                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk 1 %}" role="button" aria-label="Move Up"
-	                	data-toggle="tooltip" title="{% trans 'Move up' %}" data-container:'body'>
-	                    <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
-	                </a>
-	                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk -1 %}" role="button" aria-label="Move Down"
-	                	data-toggle="tooltip" title="{% trans 'Move down' %}" data-container:'body'>
-	                    <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
-	                </a>
-	             </div>
-	             <div class="btn-group btn-group-sm" role="group" aria-label="Toggle Visibility">
-                 <form action="{% url 'problem_set_toggle_visible' problem_set.pk %}" method="post">
-                    {% csrf_token %}
-					 <button class="btn btn-default" type="submit" aria-label="Show/Hide"
-					 	{% if problem_set.visible %}
-					 		{# Translators: Sklop je viden#}
-					 		title = "{% trans 'Problem set is visible' %}"
-				 		{% else %}
-				 			{# Translators: Sklop je skrit#}
-					 		title = "{% trans 'Problem set is hidden' %}"
-				 		{% endif %}
-					    >
-					    
-					   <span style="align-content:flex-end" class="glyphicon glyphicon-eye-{% if problem_set.visible %}open{% else %}close{% endif %}" aria-hidden="true"></span>
-					 </button>
-				 </form>
-				 </div>
-				 <div class="btn-group btn-group-sm" role="group" aria-label="Toggle Solution Visibility">
+    {% if show_teacher_forms %}
+    <div class="media-right">
+
+     <div class="btn-group btn-group-sm" role="group" aria-label="Toggle Visibility">
+       <form action="{% url 'problem_set_toggle_visible' problem_set.pk %}" method="post">
+        {% csrf_token %}
+        <button class="btn btn-default btn-sm" type="submit" aria-label="Show/Hide"
+        {% if problem_set.visible %}
+                  {# Translators: Sklop je viden#}
+                  title = "{% trans 'Problem set is visible' %}"
+              {% else %}
+                  {# Translators: Sklop je skrit#}
+                  title = "{% trans 'Problem set is hidden' %}"
+              {% endif %}
+              >
+             <i class="fa fa-eye{% if not problem_set.visible %}-slash{% endif %}"></i>
+           </button>
+       </form>
+     </div>
+
+                 <div class="btn-group btn-group-sm" role="group" aria-label="Toggle Solution Visibility">
                  <form action="{% url 'problem_set_toggle_solution_visibility' problem_set.pk %}" method="post">
                     {% csrf_token %}
-				 		<button class="btn btn-default" aria-label="Set Solution Visibility"
-						  	{% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}
-							  	{# Translators: Uradne rešitve so skrite #}
-							  	title = "{% trans 'Official solutions are hidden' %}"	
-						  	{% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
-						  		{# Translators: Uradne rešitve so pogojno vidne #}
-							  	title = "{% trans 'Official solutions are visible when solved' %}"
-						  	{% else %}
-						  		{# Translators: Uradne rešitve so vidne #}
-							  	title = "{% trans 'Official solutions are visible' %}"
-						  	{% endif %}>
-					        {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}
-					        	<span class="glyphicon glyphicon-ban-circle"></span>{% endif %}
-					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
-					        	<span class="glyphicon glyphicon-remove-circle"></span>{% endif %}
-					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE %}
-					        	<span class="glyphicon glyphicon-ok-circle"></span>
-				        	{% endif %}
-					    </button>
-					   </form>
-				 </div>
-			 </span>
-		  </div>
-		  {% endif %} {% comment %}end if show_teacher_forms{% endcomment %}
-		</div>		  
-	</div>
-  </div>          
+                        <button class="btn btn-default btn-sm" aria-label="Set Solution Visibility"
+                            {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}
+                                {# Translators: Uradne rešitve so skrite #}
+                                title = "{% trans 'Official solutions are hidden' %}"   
+                            {% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
+                                {# Translators: Uradne rešitve so pogojno vidne #}
+                                title = "{% trans 'Official solutions are visible when solved' %}"
+                            {% else %}
+                                {# Translators: Uradne rešitve so vidne #}
+                                title = "{% trans 'Official solutions are visible' %}"
+                            {% endif %}>
+                            {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}
+                                <i class="fa fa-ban"></i>{% endif %}
+                            {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
+                                <i class="fa fa-times-circle-o"></i>{% endif %}
+                            {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE %}
+                                <i class="fa fa-check-circle-o"></i>
+                            {% endif %}
+                        </button>
+                       </form>
+                 </div>
+
+                                  <div class="btn-group btn-group-sm" role="group" aria-label="Update">
+                    <button class="btn btn-default btn-for-modal" data-url="{% url 'problem_set_update' problem_set.pk %}" aria-label="Update"
+                        data-toggle="tooltip" title="{% trans 'Edit' %}" data-container:'body' data-viewport: '#viewport' id="viewport">
+                        <i class="fa fa-cog" aria-hidden="true"></i>
+                    </button>
+                 </div>
+                 <div class="btn-group btn-group-sm" role="group" aria-label="Delete">
+                    <button class="btn btn-default btn-for-modal" data-url="{% url 'problem_set_delete' problem_set.pk %}" aria-label="Delete"
+                        data-toggle="tooltip" title="{% trans 'Delete' %}" data-container:'body'>
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </button>
+                 </div>
+
+      <div class="btn-group" role="group" aria-label="{% trans 'Move' %}">
+       <form action="{% url 'problem_set_move' problem_set.pk %}" method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-sm btn-default" aria-label="Move Up" name="move_up">
+          <i class="fa fa-arrow-up"></i>
+        </button>
+        <button type="submit" class="btn btn-sm btn-default" aria-label="Move Down" name="move_down">
+          <i class="fa fa-arrow-down"></i>
+        </button>
+        </form>
+        </div>
+
+    </div>
+    {% endif %}
+
+    {% if show_teacher_forms %}
+    <div class="media-left">
+      <p class="success text-danger color{{ problem_set.grade }}">
+        {{ problem_set.percentage }}<small>%</small>
+      </p>
+    </div>
+    {% else %}
+    <div class="media-left">
+      <p class="success text-danger color{{ problem_set.grade }}">
+        {{ problem_set.percentage }}<small>%</small>
+      </p>
+    </div>
+    {% endif %}
+
+    <div class="media-body media-middle">
+      <div class="row">
+        <h4 class="media-heading">
+          <a style="{% if not problem_set.visible %}color:#bbb{% endif %}"
+             href="{% url 'problem_set_detail' problem_set.pk %}">
+             {{ problem_set.title }}
+          </a>
+        </h4>
+      </div>
+    </div>
+  </div>
 </li>
-{% endif %}
